--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -41,8 +41,8 @@
     background-color: black;
 }
 
-/* .netflix-button{
+.netflix-button{
     height: 186px;
     background-image: linear-gradient(transparent, rgba(38, 38, 0.61 ), #110) ;
-} */
+}
 
