--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -46,3 +46,100 @@
     background-image: linear-gradient(transparent, rgba(38, 38, 0.61 ), #110) ;
 }
 
+
+
+.row-posters{
+    display: flex;
+    overflow-y: hidden;
+    overflow-x: scroll;
+
+    border: none;
+
+
+
+    padding: 8px;
+}
+
+.row-posters::-webkit-scrolbar{
+    display: none;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+.row-images{
+    max-height: 100px;
+
+    object-fit: contain;
+    margin-right: 15px;
+    border: none;
+    width: 100%;
+
+    transition: transform 0.4s;
+}
+
+
+
+
+.row-images:hover{
+    transform: scale(1.08);
+    opacity: 1;
+}
+
+
+
+
+.large-row-images{
+    max-height: 250px;
+}
+
+.large-row-images:hover{
+
+    transform: scale(1.10);
+
+    opacity: 1;
+}
+
+
+
+
+.login-screen{
+
+    position: relative;
+
+    height: 100%;
+
+    background: url('https://cdn.wallpapersafari.com/24/74/zgeTuV.jpg') center no-repeat ;
+
+    background-size: cover;
+}
+
+
+
+
+
+.login-screen-gradient{
+
+
+    width: 100%;
+
+    z-index: 1;
+
+    height: 100vh;
+
+    background: rgba(0, 0, 0, 0.4);
+}
+
+
+
+
